# OOD

lw1/task1/: CMakeLists.txt  main.cpp
lw1/task1/lib/dance/: IDanceStrategy.h
lw1/task1/lib/dance/cantDanceStrategy/: CantDanceStrategy.cpp  CantDanceStrategy.h
lw1/task1/lib/dance/minuetDanceStrategy/: MinuetDanceStrategy.cpp  MinuetDanceStrategy.h
lw1/task1/lib/dance/waltzDanceStrategy/: WaltzDanceStrategy.cpp  WaltzDanceStrategy.h
lw1/task1/lib/duck/: Duck.cpp  Duck.h
lw1/task1/lib/duck/decoyDuck/: DecoyDuck.cpp  DecoyDuck.h
lw1/task1/lib/duck/mallardDuck/: MallardDuck.cpp  MallardDuck.h
lw1/task1/lib/duck/modelDuck/: ModelDuck.cpp  ModelDuck.h
lw1/task1/lib/duck/redheadDuck/: RedheadDuck.cpp  RedheadDuck.h
lw1/task1/lib/duck/rubberDuck/: RubberDuck.cpp  RubberDuck.h
lw1/task1/lib/fly/: IFlyBehavior.h
lw1/task1/lib/fly/flyNoWay/: FlyNoWay.cpp  FlyNoWay.h
lw1/task1/lib/fly/flyWithWings/: FlyWithWings.cpp  FlyWithWings.h
lw1/task1/lib/quak/: IQuackBehavior.h
lw1/task1/lib/quak/muteQuackBehavior/: MuteQuackBehavior.cpp  MuteQuackBehavior.h
lw1/task1/lib/quak/quackBehavior/: QuackBehavior.cpp  QuackBehavior.h
lw1/task1/lib/quak/squeakBehavior/: SqueakBehavior.cpp  SqueakBehavior.h
lw2/: CMakeLists.txt  main.cpp
lw2/lib/measurementStatsView/: MeasurementStatsView.cpp  MeasurementStatsView.h
lw2/lib/observable/: BaseObservable.hpp  IObservable.h
lw2/lib/observers/: IObserver.h
lw2/lib/observers/display/: Display.cpp  Display.h
lw2/lib/observers/statsDisplay/: StatsDisplay.cpp  StatsDisplay.h
lw2/lib/statsView/: StatsView.cpp  StatsView.h
lw2/lib/weatherData/: WeatherData.cpp  WeatherData.h  WeatherInfo.h
lw2/test/: test.cpp
lw2/test/lib/: TestPriorityObserver.h  TestSelfDeleteObserver.h
lw2/weatherStationDuo/: main.cpp
lw2/weatherStationDuo/lib/: WeatherStationDuo.hpp
lw2/weatherStationDuo/lib/WeatherData/: WeatherStationData.cpp  WeatherStationData.h  WeatherStationInfo.h
lw2/weatherStationDuo/lib/observer/statsDisplay/: WeatherStationDisplay.cpp  WeatherStationDisplay.h
lw2/weatherStationDuo/lib/statsView/: WeatherStationView.cpp  WeatherStationView.h
lw2/weatherStationPro/: main.cpp
lw2/weatherStationPro/lib/: WeatherProInfo.h
lw2/weatherStationPro/lib/angleStatsView/: AngleStatsView.cpp  AngleStatsView.h
lw2/weatherStationPro/lib/observers/statsDisplayPro/: StatsDisplayPro.cpp  StatsDisplayPro.h
lw2/weatherStationPro/lib/weatherDataPro/: WeatherDataPro.cpp  WeatherDataPro.h
lw3/task1/: CMakeLists.txt  main.cpp
lw3/task1/lib/beverage/: BaseBeverage.hpp  IBeverage.h
lw3/task1/lib/beverage/cappuccino/: Cappuccino.cpp  Cappuccino.h
lw3/task1/lib/beverage/coffee/: Coffee.cpp  Coffee.h
lw3/task1/lib/beverage/latte/: Latte.cpp  Latte.h
lw3/task1/lib/beverage/milkshake/: Milkshake.cpp  Milkshake.h  MilkshakePortion.hpp  MilkshakePortionType.hpp
lw3/task1/lib/beverage/tea/: Tea.cpp  Tea.h
lw3/task1/lib/beverage/tea/blackTea/: BlackTea.cpp  BlackTea.h
lw3/task1/lib/beverage/tea/earlGreyTea/: EarlGreyTea.cpp  EarlGreyTea.h
lw3/task1/lib/beverage/tea/greenTea/: GreenTea.cpp  GreenTea.h
lw3/task1/lib/beverage/tea/strawberryTea/: StrawberryTea.cpp  StrawberryTea.h
lw3/task1/lib/condiments/IceCubes/: IceCubes.h
lw3/task1/lib/condiments/chocolateCrumbs/: ChocolateCrumbs.cpp  ChocolateCrumbs.h
lw3/task1/lib/condiments/cinnamon/: Cinnamon.cpp  Cinnamon.h
lw3/task1/lib/condiments/coconutFlakes/: CoconutFlakes.h
lw3/task1/lib/condiments/condimentDecorator/: CondimentDecorator.cpp  CondimentDecorator.h
lw3/task1/lib/condiments/doublePortion/: DoublePortion.cpp  DoublePortion.h
lw3/task1/lib/condiments/lemon/: Lemon.cpp  Lemon.h
lw3/task1/lib/condiments/syrup/: Syrup.h
lw3/task1/lib/decorator/condiments/IceCubes/: IceCubeType.hpp  IceCubes.cpp  IceCubes.h
lw3/task1/lib/decorator/condiments/chocolate/: Chocolate.cpp  Chocolate.h
lw3/task1/lib/decorator/condiments/chocolateCrumbs/: ChocolateCrumbs.h
lw3/task1/lib/decorator/condiments/cinnamon/: Cinnamon.cpp  Cinnamon.h
lw3/task1/lib/decorator/condiments/coconutFlakes/: CoconutFlakes.cpp
lw3/task3/: CMakeLists.txt  main.cpp
lw3/task3/lib/decorator/compressOutputStreamDecorator/: CompressOutputStreamDecorator.cpp  CompressOutputStreamDecorator.h
lw3/task3/lib/decorator/decompressInputStreamDecorator/: DecompressInputStreamDecorator.cpp  DecompressInputStreamDecorator.h
lw3/task3/lib/decorator/decryptInputStreamDecorator/: DecryptInputStreamDecorator.cpp  DecryptInputStreamDecorator.h
lw3/task3/lib/decorator/encryptOutputStreamDecorator/: EncryptOutputStreamDecorator.cpp  EncryptOutputStreamDecorator.h
lw3/task3/lib/decorator/inputStreamDecorator/: InputStreamDecorator.cpp  InputStreamDecorator.h
lw3/task3/lib/decorator/outputStreamDecorator/: OutputStreamDecorator.cpp  OutputStreamDecorator.h
lw3/task3/lib/inputStream/: IInputStream.hpp
lw3/task3/lib/inputStream/fileInputStream/: FileInputStream.cpp  FileInputStream.h
lw3/task3/lib/inputStream/memoryInputStream/: MemoryInputStream.cpp  MemoryInputStream.h
lw3/task3/lib/outputStream/: IOutputStream.hpp
lw3/task3/lib/outputStream/fileOutputStream/: FileOutputStream.cpp  FileOutputStream.h
lw3/task3/lib/outputStream/memoryOutputStream/: MemoryOutputStream.cpp  MemoryOutputStream.h
lw3/task3/lib/replaceEncryptor/: ReplaceEncryptor.cpp  ReplaceEncryptor.h
lw4/task1/: CMakeLists.txt  main.cpp
lw4/task1/lib/canvas/: Canvas.cpp  Canvas.h  Color.h  ICanvas.h
lw4/task1/lib/canvas/svgCanvas/: SvgCanvas.hpp  simple_svg_1.0.0.hpp
lw4/task1/lib/designer/: Designer.cpp  Designer.h  IDesigner.h
lw4/task1/lib/factory/shapeFactory/: IShapeFactory.h  ShapeFactory.cpp  ShapeFactory.h
lw4/task1/lib/painter/: Painter.cpp  Painter.h
lw4/task1/lib/pictureDraft/: PictureDraft.cpp  PictureDraft.h
lw4/task1/lib/shape/: Shape.hpp
lw4/task1/lib/shape/Ellipse/: Ellipse.cpp  Ellipse.h
lw4/task1/lib/shape/Rectangle/: Rectangle.cpp  Rectangle.h
lw4/task1/lib/shape/regularPolygon/: RegularPolygon.cpp  RegularPolygon.h
lw4/task1/lib/shape/triangle/: Triangle.cpp  Triangle.h
(+24 files in other folders)
